<resources>
    <string name="app_name">MainLayouts</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="Register">Register</string>
    <string name="already_have_an_account_login_now">Already have an account? Login now</string>
    <string name="login">Login</string>
    <string name="Login">Login</string>
    <string name="dont_have_an_account_register_now">Dont have an account? Register now</string>
</resources>